Fixed notification on mobile

--- a/src/views/components/header/header.scss
+++ b/src/views/components/header/header.scss
@@ -6,6 +6,14 @@
   height: 50px;
   overflow: hidden;
   line-height: 40px;
+
+  @media only screen and (max-width: 480px) {
+    .toastify--top-right {
+      left:0;
+      right:0;
+      padding: 0 20px;
+    }
+  }
 }
 
 .header-title {
